package projectplayground.domains.enums;

/**
 * gives the possibility to assign rights for the different user
 */
public enum Accesslevel {
    Administrator,
    Moderator,
    User
}
