package projectplayground.domains.enums;

/**
 * Cleanliness indicates the pollution of the device
 */
public enum Cleanliness {
    clean,
    slightlyPolluted,
    polluted,
}

