package projectplayground.domains.enums;

/**
 * is used to check the status of a device
 */
public enum DeviceStatus {
    cleanAndWorking,
    pollutedDevice,
    brokenDevice,
    riskOfInjury,
    toBeChecked
}