package projectplayground.domains.enums;

/**
 * Status indicates how many users are currently logged into the playground
 */
public enum Status {
    open,
    wellVisited,
    full,
    overfilled
}


