@startuml
skinparam shadowing false

class Playground {
  +ID:UUID
  -title:String
  -status:Status
  -cleanliness:Cleanliness
  -location:Location
  -information:String
  -counterChildren:int
  -capacityPlayground:int
  +List<Device> devices
  +List<Expansion> expansions
  +List<User> registeredUsers

  +Playground()
  +Getter()
  +Setter()
  +addPicture(Picture picture)
  +addDevice(Device device)
  +addExpansion(Expansion expansion)
  +statusValue()
  +cleanlinessValue()
}

class Location{
 -streetname:String
 -houseNumber:int
 -postCode:int
 -cityname:String
 -district:String

 +Location()
 +Getter()
 +Setter()
}

class Device{
-Playground:playground
-title:String
-deviceStatus:DeviceStatus
-description:String
-deviceCapacity:DeviceCapacity

+Device()
+Getter()
+Setter()
+deviceStatusValue()
}

abstract class User{
-username:String
-password:String
-email:String
-firstName:String
-lastName:String
-message:String
-children:int
-friends:List<User>
-currentPlayground:Playground;

#accessLevel:Accesslevel

+User()
+Getter()
+Setter()
}


abstract class Expansion{
-title:String
-numberOfPersons:int
-description:String
-playground:Playground

+Expansion()
+Getter()
+Setter()
}

enum DeviceStatus{
    cleanAndWorking,
    pollutedDevice,
    brokenDevice,
    riskOfInjury,
    toBeChecked

}
enum Status{
 open,
 wellVisited,
 full,
 overfilled
}

enum Cleanliness{
    clean,
    slightlyPolluted,
    polluted
}
enum Accesslevel{
 Administrator,
 Moderator,
 User
}

Playground "1" *-- "1" Location
Playground "1" *-- "1" Status
Playground "1" *-- "1" Cleanliness

Playground "1" --{ "0..n" User
User "1" o-- Location
Accesslevel "1" --* "1" User
Device "0..n" }-- "1" Playground
Device "1" *-- "1" DeviceStatus
Expansion "0..n" }-- "1" Playground


@enduml
